unpackaged/main/default/objects/Master_Scheduler_Checklist__c/Master_Scheduler_Checklist__c.object-meta.xml
<CustomObject>
    <description>Used to track important information related to events and brick and mortar on-sites</description>
    <label>Master Scheduler Checklist</label>
    <nameField>
        <displayFormat>Checklist-{0000000}</displayFormat>
        <label>Master Scheduler Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Scheduler Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>