unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Scheduler Checklists</relationshipLabel>
    <relationshipName>Master_Scheduler_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>