unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Antibody_Antigen_or_Both__c.field-meta.xml
<CustomField>
    <fullName>Antibody_Antigen_or_Both__c</fullName>
    <label>Antibody, Antigen or Both</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antibody</fullName>
            </value>
            <value>
                <fullName>Antigen</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>