unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Scheduler Checklists (Billing Account)</relationshipLabel>
    <relationshipName>Master_Scheduler_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>