unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>