unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Scheduler Checklists (Billing Contact)</relationshipLabel>
    <relationshipName>Master_Scheduler_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>