unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licensed_in_State_s</valueSetName>
    </valueSet>
</CustomField>