unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <label>Billing Zip</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>