unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>