unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date/Time</label>
    <type>Date</type>
</CustomField>