unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Do_they_have_tables_and_chairs__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_tables_and_chairs__c</fullName>
    <inlineHelpText>in and out</inlineHelpText>
    <label>Do they have tables and chairs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>