unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Do_they_have_WIFI_in_and_out__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_WIFI_in_and_out__c</fullName>
    <label>Do they have WIFI? (in and out)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>