unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Do_they_need_PPE__c.field-meta.xml
<CustomField>
    <fullName>Do_they_need_PPE__c</fullName>
    <label>Do they need PPE?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>