unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Drive_through_testing__c.field-meta.xml
<CustomField>
    <fullName>Drive_through_testing__c</fullName>
    <label>Drive through testing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>