unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/How_many_people_being_trained__c.field-meta.xml
<CustomField>
    <fullName>How_many_people_being_trained__c</fullName>
    <label>How many people being trained?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>