unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Is_parking_lot_shared__c.field-meta.xml
<CustomField>
    <fullName>Is_parking_lot_shared__c</fullName>
    <label>Is parking lot shared?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>