unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Mobile_Unit__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Unit__c</fullName>
    <label>Mobile Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Berkshire</fullName>
            </value>
            <value>
                <fullName>Mega Trailer</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>