unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Master Scheduler Checklists</relationshipLabel>
    <relationshipName>Master_Scheduler_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>