unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for sending email notifications</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Scheduler_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>