unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Scheduler Checklists</relationshipLabel>
    <relationshipName>Master_Scheduler_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>