unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/SOAP_Note__c.field-meta.xml
<CustomField>
    <fullName>SOAP_Note__c</fullName>
    <label>SOAP Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>