unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Sunday_Close__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Close__c</fullName>
    <label>Sunday Close</label>
    <type>Time</type>
</CustomField>