unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Sunday_Open__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Open__c</fullName>
    <label>Sunday Open</label>
    <type>Time</type>
</CustomField>