unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Thursday_Close__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Close__c</fullName>
    <label>Thursday Close</label>
    <type>Time</type>
</CustomField>