unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Tuesday_Open__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Open__c</fullName>
    <label>Tuesday Open</label>
    <type>Time</type>
</CustomField>