unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Water_Supply__c.field-meta.xml
<CustomField>
    <fullName>Water_Supply__c</fullName>
    <label>Water Supply (Dental)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>