unpackaged/main/default/objects/Master_Scheduler_Checklist__c/fields/Wednesday_Open__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Open__c</fullName>
    <label>Wednesday Open</label>
    <type>Time</type>
</CustomField>