unpackaged/main/default/objects/Master_Scheduler_Checklist__c/recordTypes/Brick_and_Mortar_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Brick_and_Mortar_Checklist</fullName>
    <active>true</active>
    <label>Brick and Mortar Checklist</label>
</RecordType>