unpackaged/main/default/objects/Master_Scheduler_Checklist__c/recordTypes/Event_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Event_Checklist</fullName>
    <active>true</active>
    <label>Event Checklist</label>
</RecordType>