unpackaged/main/default/objects/Master_Scheduler_Checklist__c/listViews/All_Brick_and_Mortar_Checklists.listView-meta.xml
<ListView>
    <fullName>All_Brick_and_Mortar_Checklists</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Scheduler_Checklist__c.Brick_and_Mortar_Checklist</value>
    </filters>
    <label>All Brick and Mortar Checklists</label>
</ListView>