unpackaged/main/default/objects/Master_Scheduler_Checklist__c/listViews/All_Event_Checklists.listView-meta.xml
<ListView>
    <fullName>All_Event_Checklists</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Scheduler_Checklist__c.Event_Checklist</value>
    </filters>
    <label>All Event Checklists</label>
</ListView>